<resources>
    <string name="app_name">近享</string>
    <string name="txt_principles_of_statistics">统计学原理</string>
    <string name="book">书</string>
    <string name="img_market_play">文娱</string>
    <string name="img_market_life">生活</string>
    <string name="img_market_skill">技能</string>
    <string name="txt_market_other">其它</string>
    <string name="main_txt_toBottom">到底了</string>
    <string name="mian_txt_retry">重新加载</string>
    <string name="txt_mine_name">爱吃鱼的小橡果</string>
    <string name="txt_mine_introduction">爱吃鱼的小橡果</string>
    <string name="txt_mine_wait_confirm">待确认</string>
    <string name="txt_mine_wait_receive">待收货</string>
    <string name="txt_mine_wait_judge">待评价</string>
    <string name="txt_mine_on_sale">我的在售</string>
    <string name="txt_mine_check_all_sales">查看全部在售</string>
    <string name="txt_mine_publication">我的发布</string>
    <string name="txt_mine_carpooling">我的拼车</string>
    <string name="txt_mine_goodspooling">我的拼单</string>
    <string name="txt_mine_help">我的帮带</string>
    <string name="ic_mine_sale">我的求购</string>
    <string name="txt_mine_left">我的闲置</string>
    <string name="txt_mine_more">更多</string>
    <string name="txt_mine_my_business">我的买卖</string>
    <string name="txt_mine_saled">我卖出的</string>
    <string name="txt_mine_buy">我买入的</string>
    <string name="txt_mine_collect">我收藏的</string>
    <string name="txt_mine_goods_name">出一套Rose全新化妆品</string>
    <string name="txt_market_classification">分类</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_mine_uninteresting">商品不感兴趣</string>
    <string name="txt_market_sheild">屏蔽</string>
    <string name="txt_market_unlike">图片引起不适</string>
    <string name="txt_onsale">我的在售</string>
    <string name="txt_onsale_invalide_goods">失效宝贝</string>
    <string name="txt_bottom_publish_carpolling">发布拼车</string>
    <string name="txt_bottom_goodspooling">发布拼单</string>
    <string name="txt_bottom_help">发布帮带</string>
    <string name="txt_bottom_request_buy">发布求购</string>
    <string name="txt_bottom_no_use">发布闲置</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_publish">发布</string>
    <string name="txt_idle_goods">商品</string>
    <string name="idle_edit_hint">品牌型号，规格款式，入手渠道，转手原因…</string>
    <string name="txt_idle_price">价格</string>
    <string name="txt_number">数量</string>
    <string name="txt_more_information">更多信息</string>
    <string name="txt_idle_classification_and_labels">分类、标签</string>
    <string name="txt_confirm">确认</string>
    <string name="txt_classification">分类</string>
    <string name="txt_label">标签</string>
    <string name="txt_select_atmost_three">最多可以选三个</string>
    <string name="txt_second_classification">二级分类</string>
    <string name="txt_first_classification">一级分类</string>
    <string name="txt_all">全部</string>
    <string name="mine_txt_no_data">空空的耶，快去发布吧</string>
    <string name="txt_mine_change_avatar">更换头像</string>
    <string name="txt_mine_cancel">取消</string>
    <string name="txt_release_input_hint">小橡果友情提示:请选择适合的价格哦</string>
    <string name="txt_release_money">￥</string>
    <string name="edit_release_zero">0.00</string>
    <string name="txt_pc">个</string>
    <string name="edit_release_number">请输入需要卖出的个数</string>
    <string name="yuan">￥</string>
</resources>
